--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-gspread
-matplotlib
-absl-py
-tensorflow
-tensorflow_probability
-rdp
+gspread==3.6.0
+matplotlib==3.3.4
+absl-py==0.11.0
+tensorflow==2.0
+tensorflow_probability==0.9.0
+rdp==0.8
+scipy==1.6.1
+scikit-learn==0.24.1
+numpy==1.19.5
